fixed bg and content alignment

--- a/ally/products/products.css
+++ b/ally/products/products.css
@@ -15,7 +15,9 @@ body{
   justify-content: center; 
   align-items: center;
   min-height: 100vh; 
-  background: url(../images/back.png) -215% 14% no-repeat;
+  background: url(../images/back.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .navbar {
@@ -49,7 +51,7 @@ body{
   padding: 20px;
   font-family: Arial, sans-serif;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 20px;
   display: block;
 }
 
@@ -70,7 +72,7 @@ body{
 }
 
 .navbar ul ul li a:hover {
-  background-color: #555;
+  background-color: #423329;
 }
 
 .navbar .search {
@@ -82,13 +84,14 @@ body{
 .srch {
   width: 200px;
   height: 40px;
-  border: 1px solid #f4e9dc;
-  background: transparent;
-  color: #fff;
+  border: 1px solid #dcd3c6; 
+  background: #f4e9dc; 
+  color: #423329;
   padding: 10px;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-  font-family: 'Times New Roman', serif;
+  border-bottom-left-radius: 25px; 
+  border-top-left-radius: 25px;
+  font-family: 'Arial', 'sans-serif';
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
 .btn {
@@ -98,9 +101,10 @@ body{
   border: none;
   color: #fff;
   font-size: 15px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
+  border-bottom-right-radius: 25px; 
+  border-top-right-radius: 25px;
   cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
 .srch:focus, .btn:focus {
@@ -112,29 +116,32 @@ body{
   color: #000;
 }
 
+
 .logo-img {
   height: 60px;
 }
 
 .col-md-6 {
-  text-align: center;
+  text-align: right;
   color: #fff;
   font-family: 'Arial', sans-serif;
   font-weight: bold;
   display: flex;
+  padding-right: 150px;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  margin-right: 0;
   min-height: 100vh;
 }
 
 .products {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr); 
-  gap: 30px;
-  max-width: 800px; 
+  display: flex; 
+  justify-content: flex-end;
+  gap: 20px;
+  padding-right: 0;
   align-items: center; 
-  justify-content: center; 
+  margin-left: auto;
+  margin-right: 0;
 }
 
 .product-item {
